--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 			<div id="decrad" class="radcontrol">-</div>
 			<div id="incrad" class="radcontrol">+</div>
 		</div>
+		<div id="colors">
+		</div>
 	</div>
 	<canvas id="canvas" style="display: block;">
 		Sorry, your browser is rubbish.
 	</canvas>
 	<script src="main.js"></script>
 	<script src="radius.js"></script>
+	<script src="colors.js"></script>
 </body>
 </html>
 
