--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		</div>
 		<div id="colors">
 		</div>
+		<div id="save">
+			Save
+		</div>
 	</div>
 	<canvas id="canvas" style="display: block;">
 		Sorry, your browser is rubbish.
@@ -20,6 +23,7 @@
 	<script src="main.js"></script>
 	<script src="radius.js"></script>
 	<script src="colors.js"></script>
+	<script src="save.js"></script>
 </body>
 </html>
 
